<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Start">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/login_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:srcCompat="@drawable/logo"/>

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="14"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#2C5078"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="14"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColor="#2C5078"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email"
        app:layout_constraintVertical_bias="0.100"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/login"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:backgroundTint="#2C5078"
        android:onClick="signInWithEmail"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.123" />

    <Button
        android:id="@+id/regist"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:backgroundTint="#2C5078"
        android:onClick="register"
        android:text="@string/regist"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInWithGuest"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/signInWithGuest"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:onClick="signInWithGuest"
        android:text="Lépj be vendégként"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <TextView
        android:id="@+id/icheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text=""
        android:textAlignment="center"
        android:textColor="#8A1D1D"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regist" />
</androidx.constraintlayout.widget.ConstraintLayout>


